[package]
name = "clock"
version = "0.4.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "minwinbase", "winnt"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
